lidarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lidarr
  name: lidarr
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: lidarr-cm
        image: lscr.io/linuxserver/lidarr:latest
        imagePullPolicy: Always
        name: lidarr
        ports:
        - containerPort: 7878
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: lidarr-config
        - mountPath: /data
          name: media
      volumes:
        - persistentVolumeClaim:
            claimName: lidarr
          name: lidarr-config
        - name: media
          nfs:
            server: 10.0.0.100
            path: /volume1/media
