lidarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: servarr
  labels:
    app.kubernetes.io/instance: traefik-networking
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.monroe.gg`)
      priority: 10
      services:
        - name: lidarr
          port: 8686
    - kind: Rule
      match: Host(`lidarr.monroeshindelar.com`)
      priority: 10
      services:
        - name: lidarr
          port: 8686
  tls:
    certResolver: porkbun
